# effective

./: README.md  cabal.project  effective.cabal  hie.yaml
.github/workflows/: ci.yml
docs/: Discussion.md  Graded.md  Handlers.lhs  Handlers.md  IO.md  Main.hs  Members.lhs  Members.md  Nondet.md  Operations.lhs  Operations.md  Parser.md  Profiling.lhs  Profiling.md  README.md  ScopedOperations.lhs  ScopedOperations.md  State.md  TeletypePure.lhs  TeletypePure.md
src/Control/: Effect.hs
src/Control/Effect/: Alternative.hs  CodeGen.hs  Concurrency.hs  Cut.hs  Except.hs  IO.hs  Maybe.hs  Nondet.hs  Plugin.hs  Reader.hs  State.hs  WithName.hs  Writer.hs  Yield.hs
src/Control/Effect/CodeGen/: Concurrency.hs  Down.hs  Eval.hs  Gen.hs  JoinFlow.hs  Nondet.hs  ScopedC.hs  SoPU.hs  Split.hs  Type.hs  Up.hs
src/Control/Effect/Concurrency/: Type.hs
src/Control/Effect/Family/: Algebraic.hs  Scoped.hs
src/Control/Effect/HStore/: Safe.hs  Unsafe.hs
src/Control/Effect/Internal/: AlgTrans.hs  Algebra.hs  Effs.hs  Forward.hs  Handler.hs  Prog.hs  Runner.hs  TH.hs
src/Control/Effect/Internal/AlgTrans/: Type.hs
src/Control/Effect/Internal/Effs/: Indexed.hs  Sum.hs
src/Control/Effect/Internal/Effs/Indexed/: Array.hs  Class.hs  Type.hs
src/Control/Effect/Internal/Effs/Sum/: Type.hs
src/Control/Effect/Internal/Prog/: ProgDirect.hs  ProgImp.hs
src/Control/Effect/Nondet/: List.hs  Logic.hs  Type.hs
src/Control/Effect/State/: Lazy.hs  Strict.hs  Type.hs
src/Control/Monad/Trans/: CRes.hs  Push.hs  ResumpUp.hs
src/Data/List/: Kind.hs
src/Data/Sequence/: Class.hs
test/: Concur.hs  ConcurStaged.hs  Eval.hs  HOStore.hs  Misc.hs  PluginTest.hs  Staged.hs  StagedGen.hs
